--- a/test.ipynb
+++ b/test.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 90,
    "id": "85b26d0b",
    "metadata": {},
    "outputs": [
@@ -36,54 +36,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "h:[[ 0  0  0 ...  0  0  0]\n",
-      " [ 0  0  0 ...  0  0  0]\n",
-      " [ 0  0  0 ...  0  0  0]\n",
-      " ...\n",
-      " [67 67 67 ... 51 49 60]\n",
-      " [60 60 60 ... 46 48 60]\n",
-      " [28 28 28 ... 40 40 47]], s:[[  0   0   0 ...   0   0   0]\n",
-      " [  0   0   0 ...   0   0   0]\n",
-      " [  0   0   0 ...   0   0   0]\n",
-      " ...\n",
-      " [164 100 115 ... 188 255 255]\n",
-      " [ 85  67  75 ... 255 255 255]\n",
-      " [105 115  96 ... 142 153 255]], v:[[255 255 255 ... 255 255 255]\n",
-      " [255 255 255 ... 255 255 255]\n",
-      " [255 255 255 ... 255 255 255]\n",
-      " ...\n",
-      " [ 14  23  20 ...  23  27  11]\n",
-      " [ 15  19  17 ...  29  24  11]\n",
-      " [ 34  31  37 ...  43  35  23]]\n",
       "(586, 586, 3)\n"
      ]
     }
    ],
    "source": [
+    "# load image\n",
     "test_img = cv2.imread('dataset/test.png')\n",
     "test_img = custom_blur_demo(test_img)\n",
+    "\n",
+    "# rgb to hsv\n",
     "hsv = cv2.cvtColor(test_img, cv2.COLOR_BGR2HSV)\n",
     "lower_blue = np.array([100, 50, 50])\n",
     "upper_blue = np.array([110, 255, 255])\n",
-    "mask = cv2.inRange(hsv, lower_blue, upper_blue)\n",
-    "H, S, V = cv2.split(hsv)\n",
-    "print(\"h:{}, s:{}, v:{}\".format(H, S, V))\n",
-    "res = cv2.bitwise_and(test_img, test_img, mask=mask)\n",
-    "print(test_img.shape)\n",
+    "\n",
+    "# extract blue color\n",
+    "blue_mask = cv2.inRange(hsv, lower_blue, upper_blue)\n",
+    "\n",
+    "# cover the original image\n",
+    "res = cv2.bitwise_and(test_img, test_img, mask=blue_mask)\n",
+    "\n",
+    "# convert the covered image's birght part to red\n",
+    "# TODO: it is still hard to distinguish wards in the picture\n",
+    "print(res.shape)\n",
+    "height = res.shape[0]\n",
+    "width = res.shape[1]\n",
+    "for row in range(height):\n",
+    "    for col in range(width):\n",
+    "        if res[row][col][0] != 0:\n",
+    "            res[row][col] = [0, 0, 255]\n",
+    "\n",
+    "# show image\n",
     "cv2.imshow('original', test_img)\n",
     "cv2.imshow('extract', res)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "61c37fda",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_img = cv2.imread('dataset/test.png')\n"
    ]
   }
  ],
