--- a/web_crawl.ipynb
+++ b/web_crawl.ipynb
@@ -2,50 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# needed packages \n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "from time import sleep\n",
+    "\n",
     "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.chrome.options import Options\n",
     "from selenium.webdriver.common.keys import Keys"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\wuliwyh\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\ipykernel_launcher.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  \n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "please input your title: awstream\n"
+      "C:\\Users\\wuliwyh\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\ipykernel_launcher.py:2: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  \n",
+      "C:\\Users\\wuliwyh\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\ipykernel_launcher.py:9: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  if __name__ == '__main__':\n",
+      "C:\\Users\\wuliwyh\\AppData\\Local\\Programs\\Python\\Python37\\lib\\site-packages\\ipykernel_launcher.py:9: DeprecationWarning: use options instead of chrome_options\n",
+      "  if __name__ == '__main__':\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://www.connectedpapers.com/search?q=awstream\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\wuliwyh\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\ipykernel_launcher.py:11: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
-      "  # This is added back by InteractiveShellApp.init_path()\n"
+      "your url is: https://paperswithcode.com\n"
      ]
     }
    ],
@@ -53,118 +44,30 @@
     "# get the web\n",
     "driver = webdriver.Chrome('./web_driver/chromedriver.exe')\n",
     "# paper title you want to search\n",
-    "title = input('please input your title:')\n",
-    "url = 'https://www.connectedpapers.com/search?q={}'.format(title)\n",
-    "print(url)\n",
-    "url = url.replace(' ', '%20')\n",
+    "option = Options()\n",
+    "title = 'Deep Residual Learning for Image Recognition'\n",
+    "# prefs = {'profile.default_content_settings.popups': 0, 'download.default_directory': path}\n",
+    "# option.add_experimental_option('prefs', prefs)\n",
+    "# get the web\n",
+    "driver = webdriver.Chrome(executable_path='./web_driver/chromedriver.exe', chrome_options=option)\n",
+    "# paper title you want to search\n",
+    "url = 'https://paperswithcode.com'\n",
+    "print('your url is: {}'.format(url))\n",
     "# open the page\n",
-    "driver.get(url)\n",
-    "# choose the first component as result\n",
-    "driver.find_element_by_xpath('//*[@id=\"open-in-container\"]/a[1]').click()"
+    "driver.get(url)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://www.connectedpapers.com/main/1db47f3287a3eb02cd22dc764e1311faf4d26dc9/AWStream%3A-adaptive-wide%20area-streaming-analytics/graph\n"
-     ]
-    }
-   ],
-   "source": [
-    "# switch to another window\n",
-    "handles = driver.window_handles\n",
-    "driver.switch_to.window(handles[1])\n",
-    "print(driver.current_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\wuliwyh\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\ipykernel_launcher.py:2: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
-      "  \n"
-     ]
-    }
-   ],
-   "source": [
-    "# switch to prior works page\n",
-    "driver.find_element_by_xpath('//*[@id=\"desktop-app\"]/div[2]/div[1]/div/button[1]').click()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\wuliwyh\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\ipykernel_launcher.py:2: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
-      "  \n"
-     ]
-    }
-   ],
-   "source": [
-    "# download prior works\n",
-    "driver.find_element_by_xpath('//*[@id=\"desktop-app\"]/div[2]/div[3]/div[2]/div/div/div/div/span').click()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\wuliwyh\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\ipykernel_launcher.py:2: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
-      "  \n"
-     ]
-    }
-   ],
-   "source": [
-    "# switch to derivative works\n",
-    "driver.find_element_by_xpath('//*[@id=\"desktop-app\"]/div[2]/div[1]/div/button[2]').click()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\wuliwyh\\appdata\\local\\programs\\python\\python37\\lib\\site-packages\\ipykernel_launcher.py:2: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
-      "  \n"
-     ]
-    }
-   ],
-   "source": [
-    "# download derivative works\n",
-    "driver.find_element_by_xpath('//*[@id=\"desktop-app\"]/div[2]/div[3]/div[2]/div/div/div/div/span').click()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "input_box = driver.find_element(By.XPATH, '//*[@id=\"id_global_search_input\"]')\n",
+    "input_box.send_keys(title)\n",
+    "driver.find_element(By.XPATH, '//*[@id=\"id_global_search_form\"]/button/span').click()\n",
+    "driver.find_element(By.XPATH, '/html/body/div[3]/div[2]/div/div[2]/div/div[1]/h1/a').click()"
+   ]
   }
  ],
  "metadata": {
